# obfuspy

./: .gitignore  5.json  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
obfuspy/: __init__.py  __main__.py  arg_parser.py  gui.py  obfuspy.py
obfuspy/layers/: layer_a.py  layer_b.py  layer_c.py  layer_d.py  layer_e.py  layer_f.py  layer_g.py  layer_h.py  layer_i.py  layer_j.py  layer_k.py  layer_l.py  layer_m.py  layer_n.py  obfAntiDebugging.py  obfAntiTampering.py  obfAssignements.py  obfAttributes.py  obfBuiltins.py  obfClassNames.py  obfClassVariables.py  obfDeadCode.py  obfDefArguments.py  obfDefNames.py  obfDocstrings.py  obfGlobals.py  obfImports.py  obfLocalVariables.py  obfModuleVariables.py  obfNumericalConstants.py  obfStringConstants.py  obfTypeAnnotations.py
obfuspy/tests/: test.py  test_integration.py
obfuspy/tests/testfiles/: file_a.py
obfuspy/util/: ArgParser.py  Chars.py  FileHelper.py  Generator.py  TokenHelper.py  charsets.py  color_gen.py  domain.py  obfuscator.py  randomizer.py  unparser.py
