[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "obfuspy"
requires-python = ">=3.9"
authors = [{name = "Silas A. Kraume", email = "silas.kraume1552@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "python",
    "obfuscator",
    "cli"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: OS Independent"
]
# dependencies = [

# ]
dependencies = [
    "PySide6",
]
dynamic = [
    "version",
    "description"
]

[project.scripts]
obfuspy = "obfuspy.__main__:main"

[project.urls]
Github = "https://github.com/SilenZcience/obfuspy"
Download = "https://github.com/SilenZcience/obfuspy/tarball/master"
